# student-portal

./: .env  application.lnk  example.env  pyproject.toml  requirements.txt
api/: index.py
src/app/: __init__.py  main.py
src/app/config/: cloudinary_config.py
src/app/controllers/: __init__.py  admin_controller.py  assignment_controller.py  auth_controller.py  course_controller.py  enrollment_controller.py  profile_controller.py  quiz_controller.py
src/app/db/: __init__.py  session.py
src/app/models/: __init__.py  assignment.py  bank_account.py  certificate.py  course.py  course_feedback.py  course_progress.py  enrollment.py  notification.py  oauth.py  password_reset.py  payment.py  payment_proof.py  profile.py  quiz.py  quiz_audit_log.py  user.py  video.py  video_progress.py
src/app/routers/: __init__.py  admin_router.py  auth_router.py  course_router.py  enrollment_router.py  profile_router.py  student_assignment_router.py  student_dashboard_router.py  student_quiz_router.py
src/app/schemas/: __init__.py  assignment.py  course.py  course_feedback.py  enrollment.py  notification.py  oauth.py  password_reset.py  payment_proof.py  profile.py  quiz.py  user.py  video.py
src/app/utils/: __init__.py  certificate_generator.py  dependencies.py  email.py  file.py  oauth.py  security.py  time.py
